Initial commit of bazel dash docset
- Rearrange selector config to be list of dict
- Get Toc Levels working
- Add scripts for downloading and generating docsets
- Update README

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-_vendor/
-busybox/busybox.docset
-dockerfile/dockerfile.docset
-foo.docset/
-dashing
-busybox.docset/
-vendor/
+versions
+docset_versions
